"Introduce CachingEtfFlowClient for ETF flow caching and historization. Add supporting entities, repositories, configuration, and scheduled job. Include unit tests and documentation."